@@ -37,4 +37,9 @@ public class SodiumNitrateCrystal extends Crystal<Particle> {
     @Override protected Class<? extends Particle> getMajorityType() {
         return getMajorityType( Sodium.class, Nitrate.class );
     }
+
+    //Determine whether Na or NO3 should be added to a crystal when growing to maintain the ionic balance
+    @Override public Class<? extends Particle> getMinorityType() {
+        return getMajorityType( Sodium.class, Nitrate.class );
+    }
 }
